[package]
name = "rust_b2b"
version = "0.1.1"
authors = ["ray33ee <30669752+ray33ee@users.noreply.github.com>"]
edition = "2018"
description = "A command line tool for reversibly converting any file into a valid bitmap image"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.123", features = ["derive"] }
clap = "3.0.0-beta.2"
bincode = "1.3.3"
blake-hash = "0.4.1"